Fixed macOS MenuBar bug allowing user to prematurely nullify Boards, made UI more keyboard friendly and more visually consistent.