@@ -4,11 +4,14 @@ import edu.sdccd.cisc190.kanban.util.WindowHelper;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import edu.sdccd.cisc190.kanban.models.Issue;
+import javafx.scene.control.Alert;
+import javafx.scene.control.TextArea;
 import javafx.scene.control.TextField;
+import javafx.stage.Stage;
 
 public class CommentController {
     @FXML TextField authorField;
-    @FXML TextField commentField;
+    @FXML TextArea commentArea;
     @FXML private Issue issue;
 
     private Runnable onChangeCallback;
@@ -27,11 +30,28 @@ public class CommentController {
 
     @FXML
     private void addComment(ActionEvent event) {
-        if (issue != null && !commentField.getText().isBlank()) {
-            issue.addComment(authorField.getText(),  commentField.getText());
+        if (issue == null) return;
+
+        if (!commentArea.getText().trim().isEmpty() && !authorField.getText().trim().isEmpty()) {
+            if (authorField.getText().trim().equalsIgnoreCase("System")) {
+                WindowHelper.createGenericErrorWindow(
+                    Alert.AlertType.ERROR,
+                    "Could Not Add Comment",
+                    "You cannot add a comment under the name \"System\"!",
+                    (Stage) commentArea.getScene().getWindow()
+                );
+                return;
+            } else {
+                issue.addComment(authorField.getText(), commentArea.getText());
+            }
         } else {
-            assert issue != null;
-            issue.addComment("None",  "None");
+            WindowHelper.createGenericErrorWindow(
+                Alert.AlertType.ERROR,
+                "Could Not Add Comment",
+                "A comment must have both an author and a description!",
+                (Stage) commentArea.getScene().getWindow()
+            );
+            return;
         }
         if (onChangeCallback != null) {
             onChangeCallback.run();  // Update UI in main window
